fixed wrong letters font-size that was too big

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,7 @@ footer {
     border-bottom: 1px solid crimson;
     padding-bottom: 1rem;
     color: grey;
+    font-size: 1.5rem;
 }
 .wrongLetterBank p {
     font-weight: 700;
